--- a/django-project-20/SOS/ORS/template/User.html
+++ b/django-project-20/SOS/ORS/template/User.html
@@ -53,7 +53,7 @@
                 <td>
                     {{ gender_preload|safe }}
                 </td>
-                <td style="position: fixed; color: red"> {{ form.inputError.gender }}</td>
+                <td style="position: fixed; color: red;"> {{ form.inputError.gender }}</td>
             </tr>
             <tr>
                 <th>Mobile:</th>
