--- a/django-project-20/SOS/ORS/template/Registration.html
+++ b/django-project-20/SOS/ORS/template/Registration.html
@@ -50,13 +50,15 @@
 
             </tr>
             <tr>
-                <th>Gender:</th>
+                  <th>Gender:</th>
                 <td>
-                    <input type="radio" name="gender" value="Male" {% if form.gender == "Male" %}checked{% endif %}> Male
-                    <input type="radio" name="gender" value="Female" {% if form.gender == "Female" %}checked{% endif %}> Female
-                    <input type="radio" name="gender" value="Other" {% if form.gender == "Other" %}checked{% endif %}> Other
+                    <select style="width: 170px;text-align-last: center;" name='gender'>
+                        <option selected value=''>----------Select----------</option>
+                        <option value='Male'>Male</option>
+                        <option value='Female'>Female</option>
+                    </select>
                 </td>
-                <td style="position: fixed; color: red;">{{ form.inputError.gender }}</td>
+                <td style="position: fixed; color: red;"> {{ form.inputError.gender }}</td>
             </tr>
             <tr>
                 <th>Mobile:</th>
