--- a/django-project-20/SOS/ORS/template/Header.html
+++ b/django-project-20/SOS/ORS/template/Header.html
@@ -13,7 +13,7 @@
 <h3>Hi, {{request.session.user}}</h3>
 <a href="/ORS/User/"><b>Add User</b></a> |
 <a href="/ORS/UserList/"><b>User List</b></a> |
-<a href="/ORS/auth/Logout/"><b>Logout</b></a>
+<a href="/ORS/Logout/"><b>Logout</b></a>
 {% endif %}
 <hr>
 </body>
