--- a/django-project-20/SOS/ORS/template/Login.html
+++ b/django-project-20/SOS/ORS/template/Login.html
@@ -28,6 +28,14 @@
                 <button><a href="/ORS/Registration">signUp</a></button>
                 </td>
             </tr>
+            <tr>
+                <th></th>
+                <td></td>
+            </tr>
+            <tr>
+                <th></th>
+                <td><a href="/ORS/ForgetPassword/"><b>Forget my password</b></a>&nbsp;</td>
+            </tr>
         </table>
     </div>
 </form>
