--- a/django-project-20/SOS/ORS/template/Welcome.html
+++ b/django-project-20/SOS/ORS/template/Welcome.html
@@ -11,7 +11,11 @@
 <br>
 <br>
 <div align="center">
-    <h1>Welcome to Django Project Complete</h1>
+   <h1 align="center">
+       <font size="7px" color="navy">Online Result System</font>
+       <br><br>
+       <font color="red">Project-20</font>
+   </h1>
 </div>
 </body>
 </html>
