--- a/django-project-20/SOS/ORS/template/Login.html
+++ b/django-project-20/SOS/ORS/template/Login.html
@@ -25,7 +25,7 @@
             <tr>
                 <th></th>
                 <td><input type="submit" value="signIn">
-                <button><a href="/ORS/Registration">signUp</a></button>
+                <button><a href="/ORS/Registration/">signUp</a></button>
                 </td>
             </tr>
             <tr>
