--- a/django-project-20/SOS/ORS/template/Header.html
+++ b/django-project-20/SOS/ORS/template/Header.html
@@ -3,16 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    {% load static %}
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    <script src="{% static 'js/checkbox.js' %}"></script>
 </head>
 <body>
 {% if request.session.user == None %}
 <h3>Hi, Guest</h3>
-<a href="/ORS/Welcome/"><b>Welcome</b></a> |
+<a href="/ORS/Welcome/"><b>Welcome</b></a>
 <a href="/ORS/Login/"><b>Login</b></a>
 {% else %}
 <h3>Hi, {{request.session.user}}</h3>
-<a href="/ORS/User/"><b>Add User</b></a> |
-<a href="/ORS/UserList/"><b>User List</b></a> |
+<a href="/ORS/User/"><b>Add User</b></a>
+<a href="/ORS/UserList/"><b>User List</b></a>
 <a href="/ORS/Logout/"><b>Logout</b></a>
 {% endif %}
 <hr>
