--- a/django-project-20/SOS/ORS/template/UserList.html
+++ b/django-project-20/SOS/ORS/template/UserList.html
@@ -24,7 +24,7 @@
     <br>
     <table border="1%" width="100%">
         <tr>
-            <th>Select</th>
+            <th><input type="checkbox" id="selectall"></th>
             <th>S. No.</th>
             <th>First Name</th>
             <th>Last Name</th>
@@ -38,7 +38,7 @@
         </tr>
         {% for l in pageList %}
         <tr>
-            <td align="center"><input type="checkbox" name="ids" value="{{ l.id }}"></td>
+            <td align="center"><input type="checkbox" class="case" name="ids" value="{{ l.id }}"></td>
             <td align="center">{{ l.id }}</td>
             <td align="center">{{ l.firstName }}</td>
             <td align="center">{{ l.lastName }}</td>
@@ -59,7 +59,7 @@
                 <input type="submit" name="operation" value="previous" {% if form.pageNo == 1 %} disabled {% endif %}>
             </td>
             <td style="width: 30%">
-                <button><a href="/ORS/User">add</a></button>
+                <input type="submit" name="operation" value="new">
             </td>
             <td style="width: 25%"><input type="submit" name="operation"
                                           value="delete"></td>
