--- a/django-project-20/SOS/ORS/template/Header.html
+++ b/django-project-20/SOS/ORS/template/Header.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     <meta charset="UTF-8">
     <title>Title</title>
     {% load static %}
@@ -17,6 +18,8 @@
 <a href="/ORS/User/"><b>Add User</b></a>
 <a href="/ORS/UserList/"><b>User List</b></a>
 <a href="/ORS/Logout/"><b>Logout</b></a>
+<a href="/ORS/Position/"><b>Position</b></a>
+<a href="/ORS/PositionList/"><b>PositionList</b></a>
 {% endif %}
 <hr>
 </body>
