--- a/django-project-20/SOS/ORS/template/Header.html
+++ b/django-project-20/SOS/ORS/template/Header.html
@@ -20,6 +20,8 @@
 <a href="/ORS/Logout/"><b>Logout</b></a>
 <a href="/ORS/Position/"><b>Position</b></a>
 <a href="/ORS/PositionList/"><b>PositionList</b></a>
+<a href="/ORS/Customer/"><b>Customer</b></a>
+<a href="/ORS/CustomerList"><b>CustomerList</b></a>
 {% endif %}
 <hr>
 </body>
