--- a/django-project-20/SOS/ORS/template/Login.html
+++ b/django-project-20/SOS/ORS/template/Login.html
@@ -1,43 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+  <meta charset="UTF-8">
+  <title>Login</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body>
-{% include "Header.html"%}
-<form method="POST">
-    {% csrf_token %}
-    <div align="center">
-        <h1>LogIn</h1>
-        <h3><font color="red">{{ form.message }}</font></h3>
-        <table>
-            <tr>
-                <th>Login Id</th>
-                <td><input type="text" name="loginId"></td>
-                 <td style="position: fixed; color: red;"> {{ form.inputError.loginId }}</td>
-            </tr>
-            <tr>
-                <th>Password</th>
-                <th><input type="text" name="password"></th>
-                 <td style="position: fixed; color: red;"> {{ form.inputError.password }}</td>
-            </tr>
-            <tr>
-                <th></th>
-                <td><input type="submit" value="signIn">
-                <button><a href="/ORS/Registration/">signUp</a></button>
-                </td>
-            </tr>
-            <tr>
-                <th></th>
-                <td></td>
-            </tr>
-            <tr>
-                <th></th>
-                <td><a href="/ORS/ForgetPassword/"><b>Forget my password</b></a>&nbsp;</td>
-            </tr>
-        </table>
+<body class="bg-light">
+
+  <!-- Error message placeholder -->
+  <div style="position: fixed; top: 10px; left: 10px; color: red;">
+    {% if error %}
+      {{ error }}
+    {% endif %}
+  </div>
+
+  <div class="d-flex justify-content-center align-items-center" style="min-height: 100vh;">
+    <div class="card shadow p-4" style="width: 300px;">
+      <form method="post" action="/ORS/Login/" autocomplete="off">
+        {% csrf_token %}
+
+        <h4 class="text-center mb-0">Login</h4>
+
+        <div class="mb-3">
+          <label for="loginId" class="form-label">Email address</label>
+          <input type="email" class="form-control" id="loginId" name="loginId" placeholder="email@example.com" required>
+        </div>
+
+        <div class="mb-3">
+          <label for="password" class="form-label">Password</label>
+          <input type="password" class="form-control" id="password" name="password" placeholder="Password" required>
+        </div>
+
+        <div class="mb-3 form-check">
+          <input type="checkbox" class="form-check-input" id="rememberMe">
+          <label class="form-check-label" for="rememberMe">Remember me</label>
+        </div>
+
+        <button type="submit" class="btn btn-primary w-100">Sign in</button>
+      </form>
+
+      <hr>
+
+      <div class="text-center">
+        <a href="/ORS/Registration/">New around here? Sign up</a><br>
+        <a href="/ORS/ForgetPassword/">Forgot password?</a>
+      </div>
     </div>
-</form>
+  </div>
+
 </body>
 </html>
